--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "nodemon src/index.ts --watch",
     "db:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts --pretty",
     "db:migrate": "typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
-    "db:rollback": "typeorm-ts-node-commonjs migration:revert -d ./src/database/data-source.ts"
+    "db:rollback": "typeorm-ts-node-commonjs migration:revert -d ./src/database/data-source.ts",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1341.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
@@ -27,6 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "2",
     "passport": "^0.6.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-github-token": "^3.0.0",
     "passport-google-oauth-token": "^1.0.6",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -44,12 +48,19 @@
     "@types/node": "^18.16.3",
     "@types/node-fetch": "^2.6.3",
     "@types/passport": "^1.0.12",
+    "@types/passport-facebook-token": "^0.4.35",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
-    "typescript": "~4.3"
+    "typescript": "~4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "2.8.8"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "author": "conian-guys",
   "license": "ISC"
