--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^6.6.6",
+    "googleapis": "^118.0.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "2",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-facebook-token": "^4.0.0",
     "passport-github-token": "^3.0.0",
@@ -47,17 +49,18 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.16.3",
     "@types/node-fetch": "^2.6.3",
+    "@types/nodemailer": "^6.4.8",
     "@types/passport": "^1.0.12",
     "@types/passport-facebook-token": "^0.4.35",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
-    "nodemon": "^2.0.16",
-    "ts-node": "^10.7.0",
-    "typescript": "~4.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "prettier": "2.8.8"
+    "nodemon": "^2.0.16",
+    "prettier": "2.8.8",
+    "ts-node": "^10.7.0",
+    "typescript": "~4.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
