--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@types/node": "^18.16.3",
     "@types/node-fetch": "^2.6.3",
     "@types/nodemailer": "^6.4.8",
+    "@types/oauth": "^0.9.1",
     "@types/passport": "^1.0.12",
     "@types/passport-facebook-token": "^0.4.35",
+    "@types/passport-oauth2": "^1.4.12",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
