--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "ts-node": "^10.7.0",
     "typescript": "~4.3"
   },
+  "engines": {
+    "node": ">=14 <18"
+  },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
