--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build --clean && tsc",
     "lint": "eslint src/**/*.ts",
-    "start": "yarn build && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts --watch",
     "db:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts --pretty",
     "db:migrate": "typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
