--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^118.0.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
+    "mailgun.js": "^9.2.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "2",
     "nodemailer": "^6.9.3",
