--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-google-oauth-token": "^1.0.6",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.7.1",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
